Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: beonholidays.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-python-app-service
                port:
                  number: 5000

New ingress.yml for the loadbalancer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4201

          - path: /loginapi
            pathType: Prefix
            backend:
              service:
                name: login-service-api
                port:
                  number: 5002

          - path: /userapi
            pathType: Prefix
            backend:
              service:
                name: user-service-api
                port:
                  number: 5003

Working ingress.yml file

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-access360-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/default-backend: login-service-prod
    nginx.ingress.kubernetes.io/server-alias: 4.188.255.234
spec:
  ingressClassName: nginx
  rules:
  - host: 4.188.255.234.nip.io   # Replace with your actual domain or IP
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service-prod
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: login-service-prod
            port:
              number: 8083
